fix navigaton mobile link

--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -57,6 +57,7 @@ code {
 a {
     text-decoration: none;
     cursor: pointer;
+    color: black;
 }
 
 .item_font-red {
