--- a/client/src/components/Navigation/Navigation.scss
+++ b/client/src/components/Navigation/Navigation.scss
@@ -25,7 +25,6 @@
       width: 100%;
       padding: 0.6rem;
       font-weight: 400;
-      color: inherit;
       text-align: center;
       
       &:hover, &.active {
